components/policies/production/policies/macos/.chainsaw-test/resources/macos-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: macos-allowlist
  namespace: konflux-policies
data:
  namespaces: ($allowedNamespace)
